tests/NormalTests/paczka2/big_fuzzy/62271057.err
Error in line 2: 38Dn9lIQVwF S94 76,2
Error in line 3: 38Dn9lIQVwF S134 65,9
Error in line 8: eLTLQ3508jl S134 51,1
Error in line 13: 38Dn9lIQVwF S610 26,4
Error in line 24: tIojniYNjg A713 61,4
Error in line 29: tIojniYNjg S94 81,1
Error in line 37: tIojniYNjg S134 7,4
Error in line 46: eLTLQ3508jl A713 9,4
Error in line 56: tIojniYNjg S94 22,8
Error in line 80: GnTqc9QEO S94 40,0
Error in line 69: 38Dn9lIQVwF S610 88,2
Error in line 83: GnTqc9QEO S134 96,8
Error in line 89: eLTLQ3508jl S610 63,0
Error in line 98: eLTLQ3508jl S94 33,3
Error in line 94: GnTqc9QEO S610 68,5
Error in line 105: 38Dn9lIQVwF S134 20,85
Error in line 97: za39 S610 152,0
Error in line 120: 38Dn9lIQVwF A713 1,0
Error in line 126: GnTqc9QEO S610 97,2
Error in line 118: S610 S134 0,7
Error in line 142: GnTqc9QEO S13} 8,}
Error in line 143: 38Dn9lIQVwF S134 96,6
Error in line 150: tIojniYNjg S94 71,38
Error in line 159: SE7gU1ecWdQ A713 49,4
Error in line 168: 38Dn9lIQVwF S134 90,78
Error in line 163: SE7gU1ecWdQ S610 41,4
Error in line 164: za39 S134 23,1
Error in line 156: tIojniYNjg S94 249,9
Error in line 183: za39 S94 62,8
Error in line 185: za39 S610 71,8
Error in line 189: za39 S94 29,5
Error in line 191: za39 S610 90,8
Error in line 199: za39 S134 *5,0
Error in line 200: SE7gU1ecWdQ S610 43,7
Error in line 198: S610 S94 12,6
Error in line 201: SE7gU1ecWdQ S134 55,8
Error in line 181: tIojniYNjg S134 411,4
Error in line 192: za39 S134 21,4
Error in line 213: tIojniYNjg S610 0,1
Error in line 219: tIojniYNjg S94 58,4
Error in line 221: SE7gU1ecWdQ S94 97,4
Error in line 241: tIojniYNjg A713 60,55
Error in line 229: SE7gU1ecWdQ S134 148,0
Error in line 244: 38Dn9lIQVwF S134 54,7
